Z-index fixes

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -95,7 +95,7 @@ a {
 
 .titler {
 	position: relative;
-	z-index: 2;
+	z-index: 3;
 
 	width: 100%;
 	height: 100%;
@@ -122,7 +122,7 @@ a {
 
 		color: $offWhite;
 
-		letter-spacing: 0.5em;
+		letter-spacing: 0.65em;
 
 		font-size: 40%;
 
